modal-mobile spacing fixed

--- a/css/style.css
+++ b/css/style.css
@@ -490,5 +490,15 @@ a {
 
   .modal-header {
     margin-top: 0;
+    margin-bottom: 1.5rem;
+  }
+
+  .modal-description {
+    margin-bottom: 1.5rem;
+  }
+
+  .modal-btn {
+    margin: 0 auto;
+    padding: 1rem;
   }
 }
